--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-numpy
-scipy
-matplotlib
-pandas
-opencv-python
-scikit-learn
-scikit-image
-tensorflow
-keras
-torch
+numpy == 1.24.3
+scipy == 1.11.2
+matplotlib == 3.8.0
+pandas == 2.1.1
+opencv-python == 4.8.1.78
+scikit-learn == 1.3.1
+scikit-image == 0.21.0
+tensorflow == 2.16.1
+keras == 3.1.1
+torch == 2.2.1
+joblib == 1.3.2
