--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ pandas == 2.1.1
 opencv-python == 4.8.1.78
 scikit-learn == 1.3.1
 scikit-image == 0.21.0
-tensorflow == 2.16.1
-keras == 3.1.1
+tensorflow[and-cuda]
+keras
 torch == 2.2.1
 joblib == 1.3.2
 seaborn == 0.13.2
