predictions resnet 512 (25 epochs)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /venv/
 /ima205-challenge-2024.zip
 /archivo_pruebas.ipynb
-/unet_model.h5
 /masks_test
 /masks_train
+/git-lfs-3.2.0
+/git-lfs-linux-amd64-v3.2.0.tar.gz
+/environment.yml
